# dirt-cl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: kernel.cl  kernel.hpp.in  main.cpp  predicate.hpp
